Ajout de la gestion de Sentry pour le monitoring des erreurs, mise à jour des fichiers de configuration, ajout de nouveaux endpoints pour le dashboard et le health check, et amélioration des tests d'intégration.

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ ODOO_URL=http://localhost:8069
 ODOO_DB=odoo_db
 ODOO_USER=admin
 ODOO_PASSWORD=admin
+SENTRY_DSN=
+# DSN Sentry (optionnel, pour monitoring des erreurs)
