--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "Test environment for WooCommerce-Odoo sync project",
   "scripts": {
-    "test": "venv/bin/python -m pytest tests/ -v",
-    "test-coverage": "venv/bin/python -m pytest tests/ --cov=core --cov=utils --cov-report=html",
-    "lint": "venv/bin/python -m flake8 .",
-    "format": "venv/bin/python -m black .",
-    "start": "venv/bin/python scripts/sync_orders.py"
+    "test": "python3 -m pytest tests/ -v",
+    "test-coverage": "python3 -m pytest tests/ --cov=core --cov=utils --cov-report=html",
+    "lint": "python3 -m flake8 .",
+    "format": "python3 -m black .",
+    "start": "python3 scripts/sync_orders.py",
+    "install-deps": "pip3 install --user -r requirements.txt"
   },
   "devDependencies": {},
   "dependencies": {}
