Enhance logging configuration and validation processes; improve error handling and data mapping for WooCommerce-Odoo synchronization. Added detailed logging for API calls, validation steps, and synchronization operations. Updated database management and introduced new utility functions for better data handling.

--- a/config/logging.conf
+++ b/config/logging.conf
@@ -1,21 +1,63 @@
+# Configuration du système de logging
+# Ce fichier définit comment les logs sont formatés et affichés
+
 [loggers]
-keys=root
+# Liste des loggers configurés
+# root est le logger principal de l'application
+# sync_logger est spécifique à la synchronisation
+keys=root,sync_logger
 
 [handlers]
-keys=consoleHandler
+# Liste des handlers configurés
+# consoleHandler : affiche les logs dans la console
+# fileHandler : sauvegarde les logs dans un fichier
+# errorFileHandler : sauvegarde les erreurs dans un fichier séparé
+keys=consoleHandler,fileHandler,errorFileHandler
 
 [formatters]
-keys=simpleFormatter
+# Liste des formatters configurés
+# simpleFormatter : format basique
+# detailedFormatter : format détaillé avec plus d'informations
+keys=simpleFormatter,detailedFormatter
 
 [logger_root]
+# Configuration du logger principal
 level=INFO
-handlers=consoleHandler
+handlers=consoleHandler,fileHandler,errorFileHandler
+qualname=root
+
+[logger_sync_logger]
+# Logger spécifique pour la synchronisation
+level=DEBUG
+handlers=consoleHandler,fileHandler,errorFileHandler
+qualname=sync_woocommerce_odoo
+propagate=0
 
 [handler_consoleHandler]
+# Configuration du handler console
 class=StreamHandler
 level=INFO
 formatter=simpleFormatter
 args=(sys.stdout,)
 
+[handler_fileHandler]
+# Configuration du handler fichier
+class=FileHandler
+level=DEBUG
+formatter=detailedFormatter
+args=('%(log_dir)s/sync.log', 'a')
+
+[handler_errorFileHandler]
+# Configuration du handler fichier d'erreurs
+class=FileHandler
+level=ERROR
+formatter=detailedFormatter
+args=('%(log_dir)s/errors.log', 'a')
+
 [formatter_simpleFormatter]
-format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
+# Format simple des messages de log
+format=%(asctime)s - %(levelname)s - %(message)s
+
+[formatter_detailedFormatter]
+# Format détaillé des messages de log
+format=%(asctime)s - %(name)s - %(levelname)s - [%(filename)s:%(lineno)d] - %(message)s
