Mise à jour du README.md pour améliorer la clarté et fournir des exemples dans les sections sur la gestion des erreurs, le logging et les tests.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,16 @@
 {
     "cSpell.words": [
+        "commandes",
         "Décommentez",
         "dotenv",
         "fichier",
+        "Gestionnaire",
+        "initialisé",
         "ODOO",
         "odoorpc",
+        "processus",
+        "synchronisation",
+        "Synchronise",
         "woocommerce"
     ]
 }
