Update cSpell configuration in settings.json to include additional French words for improved spell checking.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,30 @@
 {
     "cSpell.words": [
+        "chaque",
+        "commande",
         "commandes",
+        "comprend",
+        "coordonne",
         "Décommentez",
         "dotenv",
         "fichier",
         "Gestionnaire",
+        "incluant",
         "initialisé",
+        "Journalisation",
+        "Marquage",
+        "marquée",
         "ODOO",
         "odoorpc",
+        "orchestre",
         "processus",
+        "récupérées",
         "synchronisation",
         "Synchronise",
+        "synchronisée",
+        "traitement",
+        "transfert",
+        "Vérification",
         "woocommerce"
     ]
 }
